--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.2.0",
     "passport-local": "^1.0.0",
+    "pg": "^4.3.0",
+    "pg-hstore": "^2.3.2",
     "react": "^0.13.1",
     "react-router": "^0.13.2",
     "sass-loader": "^1.0.1",
+    "sequelize": "^2.1.3",
     "socket.io": "^1.2.1",
     "style-loader": "^0.12.0",
     "superagent": "^1.1.0",
