--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-webpack-node",
   "version": "1.1.0",
   "description": "A simple Node.js app using Express 4 with Webpack, React, alt, ImmutableJS",
-  "repository": "https://github.com/choonkending/react-webpack-node",
+  "repository": "https://github.com/kenfehling/react-webpack-node",
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
@@ -15,7 +15,7 @@
   "license": "MIT",
   "devDependencies": {},
   "engines": {
-    "node": "0.10.x"
+    "node": "0.12.x"
   },
   "dependencies": {
     "alt": "^0.16.5",
@@ -37,11 +37,15 @@
     "file-loader": "^0.8.1",
     "immutable": "^3.7.1",
     "iso": "^4.1.0",
-    "jquery": "^2.1.3",
+    "jquery": "^2.1.4",
+    "jquery-ui": "^1.10.5",
     "jscs-loader": "0.0.5",
     "jsx-loader": "^0.13.1",
     "keymirror": "^0.1.0",
-    "lodash": "^3.7.0",
+    "restify": "^3.0.3",
+    "restify-https": "0.0.3",
+    "fb": "git+https://github.com/Thuzi/facebook-node-sdk.git",
+    "lodash": "^3.9.3",
     "lusca": "^1.0.2",
     "method-override": "^2.3.1",
     "mongoose": "^4.0.2",
