--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-helmet": "^1.0.1",
-    "react-router": "1.0.0-rc1",
+    "react-router": "1.0.0",
     "sass-loader": "^1.0.2",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
