--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "dependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^5.8.34",
-    "babel-eslint": "^3.1.14",
-    "babel-loader": "^5.4.0",
-    "babel-plugin-react-transform": "^1.1.1",
+    "babel-core": "^6.3.26",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-runtime": "^6.3.19",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.9.3",
     "classnames": "^2.2.1",
@@ -32,6 +35,7 @@
     "cookie-session": "^1.1.0",
     "css-loader": "^0.23.0",
     "deep-equal": "^1.0.1",
+    "es-symbol": "^1.1.2",
     "es6-promise": "^3.0.2",
     "eslint": "^0.22.1",
     "eslint-loader": "^0.12.0",
