--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,24 @@
 {
-  "stage": 0,
+  "presets": [
+    "es2015",
+    "react"
+  ],
   "env": {
     "development": {
-      "plugins": ["react-transform"],
-      "extra": {
-        "react-transform": {
-          "transforms": [{
-            "transform": "react-transform-hmr",
-            "imports": ["react"],
-            "locals": ["module"]
-          }, {
-            "transform": "react-transform-catch-errors",
-            "imports": ["react", "redbox-react"]
-          }]
-        }
-      }
+      plugins: [
+        ['react-transform', {
+          transforms: [
+            {
+              transform: 'react-transform-hmr',
+              imports: ['react'],
+              locals: ['module'],
+            }, {
+              transform: 'react-transform-catch-errors',
+              imports: ['react', 'redbox-react'],
+            },
+          ],
+        }],
+      ]
     }
   }
 }
