--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^4.5.1",
+    "pg-hstore": "^2.3.2",
     "postcss-import": "^8.0.2",
     "postcss-loader": "^0.8.2",
     "postcss-mixins": "^4.0.1",
@@ -103,6 +105,8 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
     "rimraf": "^2.5.2",
+    "sequelize": "^3.19.3",
+    "sequelize-cli": "^2.3.1",
     "spark-md5": "^2.0.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
