--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "classnames": "^2.2.1",
     "connect-mongo": "^1.1.0",
     "cross-env": "^1.0.7",
-    "css-loader": "^0.23.0",
+    "css-loader": "^0.23.1",
     "deep-equal": "^1.0.1",
     "es6-promise": "^3.0.2",
     "eslint": "^2.2.0",
@@ -68,8 +68,8 @@
     "express": "^4.13.3",
     "express-flash": "0.0.2",
     "express-session": "^1.12.1",
-    "extract-text-webpack-plugin": "^0.8.1",
-    "file-loader": "^0.8.4",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.5",
     "helmet": "^0.15.0",
     "immutable": "^3.7.4",
     "inline-environment-variables-webpack-plugin": "0.0.2",
@@ -81,11 +81,15 @@
     "method-override": "^2.3.5",
     "mongoose": "^4.3.4",
     "node-libs-browser": "^0.5.2",
-    "node-sass": "^3.4.2",
     "passport": "^0.2.2",
     "passport-google-oauth": "^0.2.0",
     "passport-local": "^1.0.0",
+    "postcss-import": "^8.0.2",
     "postcss-loader": "^0.8.1",
+    "postcss-mixins": "^4.0.1",
+    "postcss-nested": "^1.0.0",
+    "postcss-reporter": "^1.3.3",
+    "postcss-simple-vars": "^1.2.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-helmet": "2.1.1",
@@ -98,12 +102,11 @@
     "redux-logger": "^2.0.3",
     "redux-thunk": "^1.0.0",
     "rimraf": "^2.4.4",
-    "sass-loader": "^3.1.2",
     "spark-md5": "^2.0.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "warning": "^2.0.0",
-    "webpack": "^1.12.9",
+    "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
   }
