add sessions migration and use connect-pg-simple

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "classnames": "^2.2.3",
-    "connect-mongo": "^1.1.0",
+    "connect-pg-simple": "^3.1.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "deep-equal": "^1.0.1",
@@ -80,7 +80,6 @@
     "kerberos": "0.0.19",
     "lodash": "^4.6.1",
     "method-override": "^2.3.5",
-    "mongoose": "^4.4.7",
     "node-libs-browser": "^1.0.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
