--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
     "classnames": "^2.2.3",
     "connect-pg-simple": "^3.1.0",
@@ -92,7 +93,6 @@
     "postcss-nested": "^1.0.0",
     "postcss-reporter": "^1.3.3",
     "postcss-simple-vars": "^1.2.0",
-    "q": "^1.4.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-helmet": "2.3.1",
