--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "react-router-redux": "^4.0.0",
     "react-transform-hmr": "^1.0.4",
     "redux": "^3.3.1",
+    "redux-axios-middleware": "^0.4.1",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
     "rimraf": "^2.5.2",
