Dropped react-thunk & updated axios middleware

--- a/package.json
+++ b/package.json
@@ -110,9 +110,8 @@
     "react-router-redux": "^4.0.0",
     "react-transform-hmr": "^1.0.4",
     "redux": "^3.3.1",
-    "redux-axios-middleware": "^0.4.1",
+    "redux-axios-middleware": "^1.0.0-rc.0",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.0.1",
     "rimraf": "^2.5.2",
     "sequelize": "^3.21.0",
     "sequelize-cli": "^2.3.1",
