--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "react-router-redux": "^4.0.0",
     "react-transform-hmr": "^1.0.4",
     "redux": "^3.3.1",
+    "redux-axios": "^0.0.2",
     "redux-logger": "^2.6.1",
     "rimraf": "^2.5.2",
     "sequelize": "^3.21.0",
