--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "method-override": "^2.3.5",
     "mongoose": "^4.4.7",
     "node-libs-browser": "^1.0.0",
+    "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
