--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
   },
   "dependencies": {
     "autoprefixer": "^6.3.3",
-    "axios": "^0.12.0",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.2",
     "babel-eslint": "^6.0.2",
@@ -108,13 +107,14 @@
     "react-dom": "^15.0.1",
     "react-helmet": "^3.1.0",
     "react-redux": "^4.4.1",
+    "react-redux-loading-bar": "^2.0.1",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.0",
     "react-transform-hmr": "^1.0.4",
     "redux": "^3.3.1",
+    "redux-axios": "^0.0.2",
     "redux-logger": "^2.6.1",
     "redux-mock-store": "^1.0.4",
-    "redux-thunk": "^2.0.1",
     "rimraf": "^2.5.2",
     "sequelize": "^3.21.0",
     "sequelize-cli": "^2.3.1",
