--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Choon Ken Ding",
   "license": "MIT",
   "devDependencies": {
+    "enzyme": "^2.4.1",
     "eslint": "^3.0.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.6.0",
