--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "React Node Express Mongo",
   "description": "A barebones Node.js app using Express 4 with MongoDB, and ReactJS in Flux, using Webpack as a module bundler",
-  "repository": "https://github.com/choonkending/react-webpack-node",
+  "repository": "https://github.com/reactGo/reactGo",
   "logo": "https://node-js-sample.herokuapp.com/node.svg",
   "keywords": ["node", "express", "static", "react", "webpack", "mongodb"],
   "addons" : [
