--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-webpack-node",
   "version": "1.7.17",
-  "description": "A simple Node.js app using Express 4 with Webpack, React, alt, ImmutableJS",
+  "description": "Your One-Stop solution for a full-stack app with ES6/ES2015 React.js featuring universal Redux, React Router, React Router Redux Hot reloading, CSS modules, Express 4.x, and multiple ORMs.",
   "repository": "https://github.com/choonkending/react-webpack-node",
   "main": "index.js",
   "scripts": {
