--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "repository": "https://github.com/choonkending/react-webpack-node",
   "main": "index.js",
   "scripts": {
-    "babel": "babel --presets es2015,stage-0 --ignore node_modules,public",
     "babel-node": "babel-node --presets es2015,stage-0 --ignore node_modules,public",
     "sequelize": "node_modules/.bin/sequelize",
     "lint": "eslint --ext .js,.jsx app server",
@@ -15,8 +14,7 @@
     "dev": "cross-env NODE_ENV=development nodemon",
     "build:dev": "cross-env NODE_ENV=development webpack --colors --config ./webpack/webpack.config.dev-server.js",
     "build:prod": "cross-env NODE_ENV=production webpack --colors --config ./webpack/webpack.config.prod.js",
-    "build:node": "cross-env NODE_ENV=production npm run babel -- ./server -d ./compiled",
-    "build": "npm run clean && npm run build:prod && npm run build:node",
+    "build": "npm run clean && npm run build:prod",
     "test": "cross-env NODE_ENV=test karma start",
     "test:watch": "cross-env NODE_ENV=test npm test -- --watch --no-single-run",
     "postinstall": "npm run build",
