--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-plugin-transform-react-constant-elements": "^6.5.0",
     "babel-plugin-transform-react-inline-elements": "^6.6.5",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.3",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
@@ -72,6 +73,7 @@
     "cross-env": "^2.0.1",
     "css-loader": "^0.25.0",
     "es6-promise": "^3.1.2",
+    "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.4",
     "express-flash": "0.0.2",
     "express-session": "^1.14.1",
