Remove stylelint as dependency
- Remove webpack dependency
- Remove from nodemon.json
- Remove .stylelintrc

Linting is excellent, however currently it provides more noise than benefit. In
our effort to reduce the surface area of support reactGo provides, I think it is
better to remove it for now. If we find use for it in the future, we can re-add
it in.

--- a/package.json
+++ b/package.json
@@ -39,9 +39,7 @@
     "react-addons-test-utils": "^15.4.1",
     "react-transform-catch-errors": "^1.0.2",
     "redux-mock-store": "1.1.2",
-    "sinon": "^1.17.5",
-    "stylelint": "^7.1.0",
-    "stylelint-webpack-plugin": "^0.4.2"
+    "sinon": "^1.17.5"
   },
   "engines": {
     "node": ">=6.x"
