--- a/package.json
+++ b/package.json
@@ -67,12 +67,12 @@
     "connect-mongo": "^1.3.2",
     "connect-pg-simple": "^3.1.0",
     "cross-env": "^2.0.1",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.1",
     "es6-promise": "^3.1.2",
     "express": "^4.13.4",
     "express-flash": "0.0.2",
     "express-session": "^1.14.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.9.0",
     "helmet": "^2.1.2",
     "json-loader": "^0.5.4",
@@ -104,7 +104,7 @@
     "spark-md5": "^2.0.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.0-rc.3",
+    "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.14.0"
   }
