--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.14.0"
+    "webpack-hot-middleware": "^2.14.0",
+    "webpack-manifest-plugin": "^1.1.0"
   }
 }
