--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Choon Ken Ding",
   "license": "MIT",
   "devDependencies": {
+    "babel-register": "^6.24.0",
     "enzyme": "^2.4.1",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^10.0.0",
