--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "dev": "cross-env NODE_ENV=development nodemon",
     "build:dev": "cross-env NODE_ENV=development webpack --debug --colors --display-error-details --config ./webpack/webpack.config.js",
     "build": "npm run clean && cross-env NODE_ENV=production webpack --colors --display-error-details --config ./webpack/webpack.config.js",
-    "test": "cross-env NODE_ENV=test karma start ./app/tests/karma.conf.js",
-    "test:watch": "cross-env NODE_ENV=test npm test -- --watch --no-single-run"
+    "test": "mocha ./app/tests/setup.js --compilers css:./app/tests/compilers/css ./app/**/*-test.js",
+    "test:watch": "mocha ./app/tests/setup.js --watch --compilers css:./app/tests/compilers/css ./app/**/*-test.js"
   },
   "author": "Choon Ken Ding",
   "license": "MIT",
