--- a/package.json
+++ b/package.json
@@ -27,16 +27,9 @@
     "eslint-plugin-jsx-a11y": "^2.2.0",
     "eslint-plugin-react": "^6.2.0",
     "expect": "^1.15.2",
-    "karma": "^1.3.0",
-    "karma-jsdom-launcher": "^4.0.0",
-    "karma-mocha": "^1.0.1",
-    "karma-mocha-reporter": "^2.1.0",
-    "karma-sinon": "^1.0.4",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.2",
+    "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
     "nodemon": "^1.10.2",
-    "null-loader": "^0.1.1",
     "react-addons-test-utils": "^15.4.1",
     "react-transform-catch-errors": "^1.0.2",
     "redux-mock-store": "1.1.2",
