--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
     "nodemon": "^1.10.2",
-    "react-addons-test-utils": "^15.4.1",
+    "react-test-renderer": "^15.5.3",
     "react-transform-catch-errors": "^1.0.2",
     "redux-mock-store": "1.1.2",
     "sinon": "^1.17.5"
@@ -39,67 +39,72 @@
     "node": ">=6.x"
   },
   "dependencies": {
-    "autoprefixer": "^6.4.0",
+    "autoprefixer": "^6.7.7",
     "axios": "^0.14.0",
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.4.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.12",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-preset-stage-0": "^6.24.1",
     "bcrypt-nodejs": "0.0.3",
-    "bluebird": "^3.4.6",
-    "body-parser": "^1.15.0",
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.1",
     "classnames": "^2.2.3",
     "compression": "^1.6.2",
     "connect-mongo": "^1.3.2",
     "connect-pg-simple": "^3.1.0",
     "cross-env": "^2.0.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.26.4",
+    "enzyme": "^2.8.0",
     "es6-promise": "^3.1.2",
-    "express": "^4.13.4",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
+    "express": "^4.15.2",
     "express-flash": "0.0.2",
-    "express-session": "^1.14.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "express-session": "^1.15.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
     "helmet": "^2.1.2",
     "json-loader": "^0.5.4",
     "lodash": "^4.16.2",
-    "method-override": "^2.3.5",
-    "mongoose": "^4.5.10",
+    "method-override": "^2.3.8",
+    "mongoose": "^4.9.3",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^6.0.3",
+    "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
-    "postcss-cssnext": "^2.9.0",
+    "postcss-cssnext": "^2.10.0",
     "postcss-import": "^9.0.0",
-    "postcss-loader": "^1.2.1",
+    "postcss-loader": "^1.3.3",
     "postcss-reporter": "^3.0.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-helmet": "^3.2.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.7.0",
+    "prop-types": "^15.5.4",
+    "react": "^15.5.3",
+    "react-addons-test-utils": "^15.5.0",
+    "react-dom": "^15.5.3",
+    "react-helmet": "^5.0.2",
+    "react-redux": "^4.4.7",
+    "react-router": "^3.0.3",
     "react-router-redux": "^4.0.0",
     "react-transform-hmr": "^1.0.4",
     "redux": "^3.6.0",
-    "redux-logger": "^2.6.1",
+    "redux-logger": "^2.10.2",
     "redux-thunk": "^2.0.1",
-    "rimraf": "^2.5.4",
-    "sequelize": "^3.24.1",
-    "sequelize-cli": "^2.3.1",
+    "rimraf": "^2.6.1",
+    "sequelize": "^3.30.4",
+    "sequelize-cli": "^2.7.0",
     "spark-md5": "^2.0.2",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.14.0"
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.3.3",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
