Add webpack-manifest-plugin dependency to generate an asset manifest
- First step in allowing long term asset caching by referencing the
chunk hash

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "url-loader": "^0.5.8",
     "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-manifest-plugin": "^1.1.0"
   }
 }
