Seperate build task for webpack production to individual webpack tasks
- Instead of a multiple configuration array passed in, we are now
compiling the browser and server bundle sequentially. This will be
slower unfortunately, as multiple configuration processes the
configurations in parallel.
- We split them up in order to reference manifest.json that is
generated on the client. Also it makes our webpack.config simpler and
easier to understand given the consistency between production and
development builds.
- Create a `webpack` task which is used in npm run build:dev and build

webpack script task to package.json

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "clean": "rimraf public && rimraf compiled",
     "start": "npm run build && cross-env NODE_ENV=production node compiled/server.js",
     "dev": "cross-env NODE_ENV=development nodemon",
-    "build:dev": "cross-env NODE_ENV=development webpack --debug --colors --display-error-details --config ./webpack/webpack.config.js",
-    "build": "npm run clean && cross-env NODE_ENV=production webpack --colors --display-error-details --config ./webpack/webpack.config.js",
+    "build:dev": "cross-env NODE_ENV=development npm run webpack -- --env.server",
+    "build": "npm run clean && cross-env NODE_ENV=production npm run webpack -- --env.browser && NODE_ENV=production npm run webpack -- --env.server",
+    "webpack": "webpack --colors --display-error-details --config ./webpack/webpack.config.js",
     "test": "mocha ./app/tests/setup.js --compilers css:./app/tests/compilers/css ./app/**/*-test.js",
     "test:watch": "mocha ./app/tests/setup.js --watch --compilers css:./app/tests/compilers/css ./app/**/*-test.js"
   },
