--- a/package.json
+++ b/package.json
@@ -20,90 +20,91 @@
   "author": "Choon Ken Ding",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^7.2.1",
+    "babel-eslint": "^7.2.3",
     "babel-register": "^6.24.0",
-    "enzyme": "^2.8.0",
+    "enzyme": "^2.9.1",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "expect": "^1.15.2",
-    "jsdom": "^9.12.0",
-    "mocha": "^3.2.0",
+    "jsdom": "^11.1.0",
+    "mocha": "^3.5.0",
     "nodemon": "^1.10.2",
-    "react-test-renderer": "^15.5.3",
-    "react-transform-catch-errors": "^1.0.2",
-    "redux-mock-store": "1.2.2",
-    "sinon": "^2.1.0"
+    "react-test-renderer": "^15.6.1",
+    "redux-mock-store": "^1.2.3",
+    "sinon": "^3.1.0"
   },
   "engines": {
     "node": ">=6.x"
   },
   "dependencies": {
-    "autoprefixer": "^6.7.7",
-    "axios": "^0.16.0",
+    "autoprefixer": "^7.1.2",
+    "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.3.3",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.0",
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.17.2",
     "classnames": "^2.2.3",
-    "compression": "^1.6.2",
+    "compression": "^1.7.0",
     "connect-mongo": "^1.3.2",
     "connect-pg-simple": "^3.1.0",
-    "cross-env": "^4.0.0",
-    "css-loader": "^0.28.0",
-    "es6-promise": "^4.1.0",
-    "express": "^4.15.2",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.4",
+    "es6-promise": "^4.1.1",
+    "express": "^4.15.4",
     "express-flash": "0.0.2",
-    "express-session": "^1.15.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "helmet": "^3.5.0",
-    "json-loader": "^0.5.4",
+    "express-session": "^1.15.5",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "helmet": "^3.8.1",
+    "history": "^4.6.3",
+    "json-loader": "^0.5.7",
     "lodash": "^4.16.2",
-    "method-override": "^2.3.8",
-    "mongoose": "^4.9.3",
+    "method-override": "^2.3.9",
+    "mongoose": "^4.11.6",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
-    "postcss-cssnext": "^2.10.0",
-    "postcss-import": "^9.0.0",
-    "postcss-loader": "^1.3.3",
-    "postcss-reporter": "^3.0.0",
-    "prop-types": "^15.5.4",
-    "react": "^15.5.3",
-    "react-addons-test-utils": "^15.5.0",
-    "react-dom": "^15.5.3",
-    "react-helmet": "^5.0.2",
-    "react-redux": "^5.0.3",
-    "react-router": "^3.0.3",
-    "react-router-redux": "^4.0.0",
-    "react-transform-hmr": "^1.0.4",
-    "redux": "^3.6.0",
-    "redux-logger": "^3.0.1",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
+    "postcss-reporter": "^5.0.0",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-addons-test-utils": "^15.6.0",
+    "react-dom": "^15.6.1",
+    "react-helmet": "^5.1.3",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.1.2",
+    "react-router-config": "^1.0.0-beta.3",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.0.1",
     "rimraf": "^2.6.1",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
     "spark-md5": "^3.0.0",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.3",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-manifest-plugin": "^1.1.0"
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.2",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-manifest-plugin": "^1.2.1"
   }
 }
