--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-webpack-node",
-  "version": "3.4.1",
+  "version": "3.5.0",
   "description": "Your One-Stop solution for a full-stack app with ES6/ES2015 React.js featuring universal Redux, React Router, React Router Redux Hot reloading, CSS modules, Express 4.x, and multiple ORMs.",
   "repository": "https://github.com/choonkending/react-webpack-node",
   "main": "index.js",
@@ -20,92 +20,94 @@
   "author": "Choon Ken Ding",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^7.2.1",
-    "babel-register": "^6.24.0",
-    "enzyme": "^2.8.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "expect": "^1.15.2",
-    "jsdom": "^9.12.0",
-    "mocha": "^3.2.0",
-    "nodemon": "^1.10.2",
-    "react-test-renderer": "^15.5.3",
+    "babel-eslint": "^8.2.2",
+    "babel-register": "^6.26.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "expect": "^22.4.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "jsdom": "^11.6.2",
+    "mocha": "^5.0.1",
+    "nodemon": "^1.17.1",
+    "react-test-renderer": "^16.2.0",
     "react-transform-catch-errors": "^1.0.2",
-    "redux-mock-store": "1.2.2",
-    "sinon": "^2.1.0"
+    "redux-mock-store": "^1.5.1",
+    "sinon": "^4.4.2",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10"
   },
   "engines": {
-    "node": ">=6.x"
+    "node": ">=6.11.5"
   },
   "dependencies": {
-    "autoprefixer": "^6.7.7",
-    "axios": "^0.16.0",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-react-transform": "^2.0.2",
+    "autoprefixer": "^8.1.0",
+    "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
+    "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.3.3",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
-    "bcrypt-nodejs": "0.0.3",
-    "bluebird": "^3.5.0",
-    "body-parser": "^1.17.1",
-    "classnames": "^2.2.3",
-    "compression": "^1.6.2",
-    "connect-mongo": "^1.3.2",
-    "connect-pg-simple": "^3.1.0",
+    "bcrypt-nodejs": "^0.0.3",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
+    "classnames": "^2.2.5",
+    "compression": "^1.7.2",
+    "connect-mongo": "^2.0.1",
+    "connect-pg-simple": "^4.2.1",
     "cookie-parser": "^1.4.3",
-    "cross-env": "^4.0.0",
-    "css-loader": "^0.28.0",
-    "es6-promise": "^4.1.0",
-    "express": "^4.15.2",
-    "express-flash": "0.0.2",
-    "express-session": "^1.15.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "helmet": "^3.5.0",
-    "json-loader": "^0.5.4",
-    "lodash": "^4.16.2",
-    "method-override": "^2.3.8",
-    "mongoose": "^4.9.3",
-    "passport": "^0.3.2",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.28.10",
+    "es6-promise": "^4.2.4",
+    "express": "^4.16.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.15.6",
+    "file-loader": "^1.1.11",
+    "helmet": "^3.12.0",
+    "json-loader": "^0.5.7",
+    "lodash": "^4.17.5",
+    "method-override": "^2.3.10",
+    "mongoose": "^5.0.8",
+    "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^6.1.5",
+    "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
-    "postcss-cssnext": "^2.10.0",
-    "postcss-import": "^9.0.0",
-    "postcss-loader": "^1.3.3",
-    "postcss-reporter": "^3.0.0",
-    "prop-types": "^15.5.4",
-    "react": "^15.5.3",
-    "react-addons-test-utils": "^15.5.0",
-    "react-dom": "^15.5.3",
-    "react-helmet": "^5.0.2",
-    "react-redux": "^5.0.3",
-    "react-router": "^3.0.3",
-    "react-router-redux": "^4.0.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.1",
+    "postcss-reporter": "^5.0.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.2.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^3.2.0",
+    "react-router-redux": "^4.0.8",
     "react-transform-hmr": "^1.0.4",
-    "redux": "^3.6.0",
-    "redux-logger": "^3.0.1",
-    "redux-thunk": "^2.0.1",
-    "rimraf": "^2.6.1",
-    "sequelize": "^3.30.4",
-    "sequelize-cli": "^2.7.0",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "rimraf": "^2.6.2",
+    "sequelize": "^4.35.1",
+    "sequelize-cli": "^4.0.0",
     "serialize-javascript": "^1.4.0",
     "spark-md5": "^3.0.0",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.3",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-manifest-plugin": "^1.1.0"
+    "style-loader": "^0.20.2",
+    "url-loader": "^1.0.1",
+    "webpack-dev-middleware": "^3.0.0",
+    "webpack-hot-middleware": "^2.21.2",
+    "webpack-manifest-plugin": "^2.0.0-rc.2"
   }
 }
