--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "expect": "^1.15.2",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
+    "node-sass": "^4.7.2",
     "nodemon": "^1.10.2",
     "react-test-renderer": "^15.5.3",
     "react-transform-catch-errors": "^1.0.2",
     "redux-mock-store": "1.2.2",
-    "sinon": "^2.1.0"
+    "sass-loader": "^6.0.7",
+    "sinon": "^2.1.0",
+    "webpack": "^2.7.0"
   },
   "engines": {
     "node": ">=6.x"
@@ -103,7 +106,6 @@
     "spark-md5": "^3.0.0",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
-    "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-manifest-plugin": "^1.1.0"
