--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint --ext .js,.jsx app server",
     "lint:fix": "eslint --ext .js,.jsx app server --fix",
     "clean": "rimraf public && rimraf compiled",
-    "start": "npm run build && cross-env NODE_ENV=production node compiled/server.js",
+    "start": "npm run build && cross-env NODE_ENV=production node compiled/server.js --watch",
     "dev": "cross-env NODE_ENV=development nodemon",
     "build:dev": "cross-env NODE_ENV=development npm run webpack -- --env.server",
     "build": "npm run clean && cross-env NODE_ENV=production npm run webpack -- --env.browser && cross-env NODE_ENV=production npm run webpack -- --env.server",
@@ -90,6 +90,7 @@
     "prop-types": "^15.5.4",
     "react": "^15.5.3",
     "react-addons-test-utils": "^15.5.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^15.5.3",
     "react-helmet": "^5.0.2",
     "react-redux": "^5.0.3",
@@ -97,6 +98,7 @@
     "react-router-redux": "^4.0.0",
     "react-transform-hmr": "^1.0.4",
     "redux": "^3.6.0",
+    "redux-form": "^7.3.0",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.0.1",
     "rimraf": "^2.6.1",
