--- a/package.json
+++ b/package.json
@@ -20,32 +20,10 @@
   "author": "Choon Ken Ding",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^7.2.1",
-    "babel-register": "^6.24.0",
-    "enzyme": "^2.8.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "expect": "^1.15.2",
-    "jsdom": "^9.12.0",
-    "mocha": "^3.2.0",
-    "nodemon": "^1.10.2",
-    "react-test-renderer": "^15.5.3",
-    "react-transform-catch-errors": "^1.0.2",
-    "redux-mock-store": "1.2.2",
-    "sinon": "^2.1.0"
-  },
-  "engines": {
-    "node": ">=6.x"
-  },
-  "dependencies": {
-    "autoprefixer": "^6.7.7",
-    "axios": "^0.16.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-eslint": "^7.2.1",
+    "babel-loader": "^7.1.5",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
@@ -54,6 +32,45 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.0",
+    "css-loader": "^0.28.0",
+    "enzyme": "^2.8.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "expect": "^1.15.2",
+    "file-loader": "^0.11.1",
+    "jsdom": "^9.12.0",
+    "json-loader": "^0.5.4",
+    "mini-css-extract-plugin": "^0.4.3",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.10.2",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^12.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-reporter": "^6.0.0",
+    "react-test-renderer": "^15.5.3",
+    "react-transform-catch-errors": "^1.0.2",
+    "redux-mock-store": "1.2.2",
+    "sinon": "^2.1.0",
+    "source-map-support": "^0.5.9",
+    "style-loader": "^0.16.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^0.5.8",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-manifest-plugin": "^2.0.4"
+  },
+  "engines": {
+    "node": ">=6.x"
+  },
+  "dependencies": {
+    "autoprefixer": "^6.7.7",
+    "axios": "^0.16.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
@@ -63,15 +80,11 @@
     "connect-pg-simple": "^3.1.0",
     "cookie-parser": "^1.4.3",
     "cross-env": "^4.0.0",
-    "css-loader": "^0.28.0",
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
     "express-flash": "0.0.2",
     "express-session": "^1.15.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
     "helmet": "^3.5.0",
-    "json-loader": "^0.5.4",
     "lodash": "^4.16.2",
     "method-override": "^2.3.8",
     "mongoose": "^4.9.3",
@@ -80,10 +93,6 @@
     "passport-local": "^1.0.0",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
-    "postcss-cssnext": "^2.10.0",
-    "postcss-import": "^9.0.0",
-    "postcss-loader": "^1.3.3",
-    "postcss-reporter": "^3.0.0",
     "prop-types": "^15.5.4",
     "react": "^15.5.3",
     "react-addons-test-utils": "^15.5.0",
@@ -100,12 +109,6 @@
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
     "serialize-javascript": "^1.4.0",
-    "spark-md5": "^3.0.0",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.3",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-manifest-plugin": "^1.1.0"
+    "spark-md5": "^3.0.0"
   }
 }
