--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "method-override": "^3.0.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
+    "mobx-react-router": "^4.1.0",
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
@@ -114,7 +115,6 @@
     "rimraf": "^3.0.2",
     "sequelize": "^5.21.9",
     "sequelize-cli": "^5.5.1",
-    "serialize-javascript": "^3.0.0",
     "spark-md5": "^3.0.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
