contributors 코드 수정

--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   },
   "author": "Choon Ken Ding",
   "contributors": [
-    { "name": "Zero Cho" },
-    { "name": "Heroyooi" }
+    {
+      "name": "Zero Cho"
+    },
+    {
+      "name": "Heroyooi"
+    }
   ],
   "license": "MIT",
   "devDependencies": {
